--- a/Html_Coding/27-单元格合并练习.html
+++ b/Html_Coding/27-单元格合并练习.html
@@ -79,6 +79,9 @@
 快速合并和展开代码（合并和展开选中的所有标签）
 合并：Ctrl + Shift + -
 展开：Ctrl + Shift + +
+
+快速新启一行
+shift + enter
 -->
 
 <table bgcolor="black" cellspacing="1px" width="500px" height="300px" align="center">
@@ -100,5 +103,6 @@
         <td></td>
     </tr>
 </table>
+
 </body>
 </html>
