--- a/CSS_Coding/代码/23-选择器练习.html
+++ b/CSS_Coding/代码/23-选择器练习.html
@@ -55,6 +55,8 @@
     /*    属性选择器*/
         p[id]{
             color: red;
+            font-size: 10px;
+            text-decoration: underline;
         }
     </style>
 </head>
