--- a/CSS_Coding/代码/36-背景定位属性.html
+++ b/CSS_Coding/代码/36-背景定位属性.html
@@ -5,15 +5,17 @@
     <title>36-背景定位属性</title>
     <style>
         div{
-            width: 500px;
-            height: 500px;
+            height: 1000px;
         }
         .box1{
-            background-color: red;
-            background-image: url(../images/girl.jpg);
-            background-repeat: no-repeat;
+            /*background-color: red;*/
+            /*background-image: url(../images/girl.jpg);*/
+            /*background-repeat: no-repeat;*/
             /*background-position: 100px 200px;*/
-            background-position: -100px -50px;
+            /*background-position: -100px -50px;*/
+            background-image: url(../images/yxlm.jpg);
+            background-position: center top;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
