--- a/CSS_Coding/代码/43-边框属性下.html
+++ b/CSS_Coding/代码/43-边框属性下.html
@@ -46,7 +46,7 @@ border-color: 上 右 下 左
 
 3.非连写(方向+要素)
 border-top-width: 5px;
-border-top-style: solid;1
+border-top-style: solid;
 border-top-color: blue;
 
 -->
